--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.10MinuteWorkout">
-        <activity android:name=".FinishedActivity"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".BMIActivity" />
+        <activity android:name=".FinishedActivity" />
         <activity android:name=".ExerciseActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
